# irate-svn

branch/irate_jlayer1.0/: README  build.xml  configure  irate-client.iss
branch/irate_jlayer1.0/lib/: .cvsignore  Makefile
branch/irate_jlayer1.0/util/: LocaleChecker.java
branches/avendor/irate-phpserver/: README  index.php
branches/irate_jlayer1.0/: Makefile  build-help  irate-client-resource.sh  irate-client-swt.bat
branches/irate_jlayer1.0/MAD/: MadEvent.java  MadListener.java
branches/irate_jlayer1.0/lib/: jd3lib.patch
branches/irate_jlayer1.0/scripts/: cli_remote_command.pl  get_track.pl  irate-control.pl
branches/irate_jlayer1.0/util/: Makefile
tags/client0_2/irate/: Makefile  README  build.xml  irate-client.iss  irate-client.sh
tags/client0_3/irate/: build.xml  irate-client.iss
tags/client0_3rc1/irate/: irate-client.nsi
tags/client0_3rc3/irate/: irate-client-swing.bat  irate-client.iss
tags/start/kirate/kirateradio/src/: Makefile.am  Makefile.in  downloadcenter.h  infodialog.h  newaccount.cpp  plugin_kirateradio_impl.h  songlist.cpp  songselection.cpp  trackdatabase.h  view.cpp  viewdeleteddialog.h
trunk/CVSROOT/: loginfo
trunk/buddy/: .classpath  .project
trunk/irate/: .cvsignore  COPYING  Makefile  README  build-help  build.xml  configure  irate-client-swing.sh  irate-client-swt.sh  irate-client.iss  irate-client.nsi
trunk/irate-phpserver/: README  TODO  config.php  config.php.SAMPLE  index.php  irate.php  setup.sql
trunk/irate-webclient/: m3u.php  webclient.php  xmlrpcpln.php
trunk/irate/MAD/: CHANGES  CREDITS  FILE_ID.DIZ  MadEvent.java  MadListener.java  MadPlayer.java  README  README-JNI  about  mad-0.14.2b-jni-20020811.diff
trunk/irate/debian/: .cvsignore  README.Debian  changelog  control  dirs  menu  rules
trunk/irate/help/: gcc-crosscompiler.txt  user.html
trunk/irate/lib/: .cvsignore  Makefile  jd3lib.patch
trunk/irate/libcpp/: Doxyfile  Makefile  baseiratetrack.cpp  c_irate.cpp  c_irate.h  iratecenter.h  iratedef.h  iratetrack.h  libirateinterface.h  libiratenative.cpp  qt_irate.cpp  stdiratetrack.cpp  stdiratetrack.h  util_irate.cpp  util_irate.h
trunk/irate/mac/: Info.plist  MacLauncher.java  PkgInfo
trunk/irate/rpm/: README
trunk/irate/scripts/: irate-control.pl  irate-control.sh  sleep.pl
trunk/irate/util/: LocaleChecker.java  Makefile
trunk/kirate-xmms/: Doxyfile  Makefile.am  Makefile.in  configure  configure.in  configure.in.in  kirateradioxmms.kdevelop  kirateradioxmms.kdevelop.pcs  kirateradioxmms.kdevses
trunk/kirate-xmms/doc/: Makefile.am  Makefile.in
trunk/kirate-xmms/doc/en/: Makefile.am  Makefile.in  default.osd  irateabout.html
trunk/kirate-xmms/pics/: Makefile.am  Makefile.in
trunk/kirate-xmms/po/: Makefile.in  kirateradioxmms.pot
trunk/kirate-xmms/src/: Makefile.am  Makefile.in  configurationcenter.cpp  configurationcenter.h  exportdialog.h  infodialog.cpp  infodialog.h  kirateradioxmms.desktop  kirateradioxmmsui.rc  main.cpp  newaccountdialog.cpp  newaccountdialog.h  osd.cpp  osd.h  safelistviewitem.cpp  safelistviewitem.h  songlist.cpp  songlist.h  template.cpp  template.h  view.cpp  view.h  xmmswrapper.cpp  xmmswrapper.h
trunk/kirate/kirateradio/: README  configure.in.in  kirateradio.kdevses
trunk/libcpp/: Doxyfile  Makefile  c_irate.cpp  c_irate.h  iratecenter.h  qt_irate.h  stdiratetrack.cpp
trunk/libcpp/example/: simple_cpptest.cpp  simple_ctest.cpp
trunk/libcpp/jiratelib/: LibIRateNative.java  (+1 more)
(+495 files in other folders)
