KDE_DOCS = kirateradioxmms
KDE_LANG = en
kde_docs_KDEDOCS = about.html connectionfailed.html connectionrefused.html \
	connectiontimeout.html continuousfailed.html default.osd default.tmpl empty.html \
	getstuffed.html gettingstarted.html hostnotfound.html irateabout.html Makefile.am \
	Makefile.in malformedurl.html missingplayer.html notenoughratings.html \
	password.html user.html
